testsuite/tests/quantified-constraints/T15290b.stderr
T15290b.hs:28:49: error: [GHC-18872]
    • Couldn't match representation of type: f (m b)
                               with that of: f (T1 m b)
        arising from the coercion of the method ‘traverse'’
          from type ‘forall (f :: * -> *) a b.
                     Applicative' f =>
                     (a -> f b) -> m a -> f (m b)’
            to type ‘forall (f :: * -> *) a b.
                     Applicative' f =>
                     (a -> f b) -> T1 m a -> f (T1 m b)’
      Note: We cannot know what roles the parameters to ‘f’ have;
            we must assume that the role is nominal.
    • When deriving the instance for (Traversable' (T1 m))

